resolvesd logo components and align

--- a/calculadora-react-freecodecamp/src/App.css
+++ b/calculadora-react-freecodecamp/src/App.css
@@ -1,10 +1,12 @@
 .App {
   height: 100vh;
+  /* height: auto; */
   padding-top: 10px;
   background-color: #1b1b32;
   font-family: Lato, sans-serif;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
 }
@@ -12,6 +14,7 @@
 .freecodecamp-logo-contenedor {
   width: 100%;
   height: 50px;
+  padding: 14px;
   margin: 8px;
   display: flex;
   align-items: center;
@@ -29,6 +32,7 @@
   background-color: #99c9ff;
   border-radius: 20px;
   border: 5px solid white;
+  margin-top: 20px;
 }
 
 .fila {
